--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <style>
+    .zoom-container {
+    transform: scale(0.8);
+    transform-origin: top left;
+    width: 125%; /* kompensasi untuk scale agar konten tidak terpotong */
+  }
+  </style>
 </head>
 
 <body class="index-page">
@@ -72,6 +79,7 @@
   </header>
 
   <main class="main">
+    <div class="zoom-container">
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
@@ -280,6 +288,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Project</h2>
         <p>Here are some of the projects I’ve worked on, showcasing my skills in web development and graphic design, as well as my passion for creating functional and visually engaging digital experiences.</p>
+        <h2 style="color: red;">This Page Under Development !</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -455,6 +464,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Favorite Quotes</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2 style="color: red;">This Page Under Development !</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -605,47 +615,19 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <label for="name-field" class="pb-2">Your Name</label>
-                  <input type="text" name="name" id="name-field" class="form-control" required="">
-                </div>
-
-                <div class="col-md-6">
-                  <label for="email-field" class="pb-2">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email-field" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <label for="subject-field" class="pb-2">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject-field" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <label for="message-field" class="pb-2">Message</label>
-                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
+            <div class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <div class="row gy-4 text-center">
+                <p>this page are under development if you find something abnormal or bug</p>
+                <p style="font-weight: bold;">please contact me on +62 856 4216 4930(whatsapp) or email me</p>
               </div>
-            </form>
+            </div>
           </div><!-- End Contact Form -->
-
         </div>
 
       </div>
 
     </section><!-- /Contact Section -->
-
+    </div>
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
