--- a/SIMLara.html
+++ b/SIMLara.html
@@ -146,7 +146,7 @@
                 The purpose of the analysis stage is to gain a better understanding of the list of use cases that have been created in the previous stage. To reduce ambiguity in the use case scenarios, robustness analysis allows to re-analyze the stages performed by the user when executing a particular use case. In addition, this stage allows for more accurate updates to the domain model and use case scenarios. At the end of the process, the updated domain model and use case scenarios, as well as the Robustness Diagram for each use case are put through a preliminary design review to ensure that the domain model, use case scenarios, and robustness analysis results are matched.
               </p>
             </div>
-            <a href="SIMLaradetails.html">Project Details ....</a>
+            <a href="SIMLaraDetails.html">Project Details ....</a>
           </div>
 
         </div>
