--- a/design1.html
+++ b/design1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Project Details</title>
+  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -111,21 +111,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/SIM Laravel/lms (17).png" alt="">
+                  <img style="max-height: 900px;" src="assets/img/design1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/SIM Laravel/lms (18).png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/SIM Laravel/lms (19).png" alt="">
+                  <img style="max-height: 900px;" src="assets/img/design1.1.jpg" alt="">
                 </div>
 
               </div>
               <div class="swiper-pagination"></div>
-            </div>
-            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
             </div>
           </div>
 
@@ -133,20 +127,17 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: SMP Negeri 13 Magelang</li>
-                <li><strong>Project date</strong>: 19 September, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/splendiddolpin/SIMlaravel/tree/master">https://github.com/splendiddolpin/SIMlaravel</a></li>
-                
+                <li><strong>Category</strong>: Photo Edit</li>
+                <li><strong>Project date</strong>: 10 Maret, 2025</li>
+                <li><strong>Project URL</strong>: <a href="https://www.instagram.com/splendiddolpin/">@splendiddolpin</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Sistem Informasi SMP Negeri 13 Magelang</h2>
+              <h2>Sunrise light manipulation</h2>
               <p>
-                The purpose of the analysis stage is to gain a better understanding of the list of use cases that have been created in the previous stage. To reduce ambiguity in the use case scenarios, robustness analysis allows to re-analyze the stages performed by the user when executing a particular use case. In addition, this stage allows for more accurate updates to the domain model and use case scenarios. At the end of the process, the updated domain model and use case scenarios, as well as the Robustness Diagram for each use case are put through a preliminary design review to ensure that the domain model, use case scenarios, and robustness analysis results are matched.
+                This image has been meticulously edited using a slightly warm color tone to evoke a sense of comfort and natural elegance. The warmth subtly enhances skin tones and environmental hues, creating an inviting visual atmosphere without overpowering the original colors. Additionally, a controlled manipulation of sunlight has been applied—carefully introducing soft highlights and directional light flares to simulate the gentle presence of natural sunlight. This technique enriches the photograph’s depth and realism, adding a cinematic layer to the composition while maintaining the integrity of the original scene. The result is a refined visual narrative that feels both authentic and artistically enhanced, designed to engage the viewer emotionally while showcasing a harmonious balance between nature and creative editing.
               </p>
             </div>
-            <a href="SIMLaraDetails.html">Project Details ....</a>
           </div>
 
         </div>
@@ -156,6 +147,24 @@
     </section><!-- /Portfolio Details Section -->
 
   </main>
+
+  <footer id="footer" class="footer position-relative light-background">
+
+    <div class="container">
+      <div class="copyright text-center ">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+      </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+      </div>
+    </div>
+
+  </footer>
+
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
