--- a/design2.html
+++ b/design2.html
@@ -111,15 +111,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/SIM Laravel/lms (17).png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/SIM Laravel/lms (18).png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/SIM Laravel/lms (19).png" alt="">
+                  <img src="assets/img/design2.1.jpg" alt="">
                 </div>
 
               </div>
@@ -133,20 +125,19 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: SMP Negeri 13 Magelang</li>
-                <li><strong>Project date</strong>: 19 September, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/splendiddolpin/SIMlaravel/tree/master">https://github.com/splendiddolpin/SIMlaravel</a></li>
+                <li><strong>Category</strong>: Poster Design</li>
+                <li><strong>Client</strong>: HASKAM</li>
+                <li><strong>Project date</strong>: 20 November 2021</li>
+                <li><strong>Project URL</strong>: <a href="https://https://www.instagram.com/haskam_esportif/">@haskam_esportif</a></li>
                 
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Sistem Informasi SMP Negeri 13 Magelang</h2>
+              <h2>Poster HASKAM Esportif</h2>
               <p>
-                The purpose of the analysis stage is to gain a better understanding of the list of use cases that have been created in the previous stage. To reduce ambiguity in the use case scenarios, robustness analysis allows to re-analyze the stages performed by the user when executing a particular use case. In addition, this stage allows for more accurate updates to the domain model and use case scenarios. At the end of the process, the updated domain model and use case scenarios, as well as the Robustness Diagram for each use case are put through a preliminary design review to ensure that the domain model, use case scenarios, and robustness analysis results are matched.
+                This poster was created for HASKAM (Himpunan Alumni SMA Negeri 1 Kota Mungkid) to promote an exciting Esports Tournament featuring two of the most popular mobile games today: Mobile Legends: Bang Bang and PUBG Mobile. Designed to capture the energy and competitive spirit of the gaming community, the poster uses bold visuals, sharp contrasts, and dynamic elements that reflect the fast-paced nature of esports.The event invites gamers from various backgrounds, especially students and alumni, to compete and showcase their skills. With a total prize pool of IDR 3,000,000, the tournament offers not only intense competition but also a platform for building connections among alumni and local youth through a shared passion for gaming.Key information such as the registration dates, game categories, contact details, and tournament rules are clearly presented to ensure accessibility and ease of participation. The color scheme and graphic elements are chosen to appeal to the gaming audience while maintaining the identity and pride of the HASKAM alumni community.This poster is not just a promotional material, but a bridge between tradition and modern youth culture, demonstrating that alumni organizations can engage the younger generation through contemporary events like esports.
               </p>
             </div>
-            <a href="SIMLaraDetails.html">Project Details ....</a>
           </div>
 
         </div>
