--- a/index.html
+++ b/index.html
@@ -289,17 +289,17 @@
             <li data-filter=".filter-app">Web</li>
             <li data-filter=".filter-product">Design</li>
             <li data-filter=".filter-branding">AI</li>
-            <li data-filter=".filter-books">Books</li>
+            <li data-filter=".filter-photo">Photo</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/SIM Laravel/lms (17).png" class="img-fluid" alt="">
+                <img style="height: 200px; width: 100%;" src="assets/img/SIM Laravel/lms (17).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4>Web 1</h4>
+                  <p>Library Management System</p>
                   <a href="assets/img/SIM Laravel/lms (18).png" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="SIMLara.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -308,15 +308,39 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/SI/SI cover.png" class="img-fluid" alt="">
+                <img style="height: 200px; width: 100%;" src="assets/img/SI/SI cover.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4>Web 2</h4>
+                  <p>System Information</p>
                   <a href="assets/img/SI/SI cover.png" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="SISMP.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-photo">
+              <div class="portfolio-content h-100">
+                <img style="height: 200px; width: 100%;" src="assets/img/design1.2.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Photo 1</h4>
+                  <p>Sunrise light manipulation</p>
+                  <a href="assets/img/SI/SI cover.png" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="design1.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-100">
+                <img style="height: 200px; width: 100%;" src="assets/img/design1.3.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Design 1</h4>
+                  <p>Esport Poster Design</p>
+                  <a href="assets/img/SI/design.png" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="design2.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
 
           </div><!-- End Portfolio Container -->
 
