adding more project

--- a/SISMP.html
+++ b/SISMP.html
@@ -136,7 +136,7 @@
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: SMP Negeri 13 Magelang</li>
                 <li><strong>Project date</strong>: 10 Agustus, 2022</li>
-                <li><strong>Project URL</strong>: <a href="ttps://github.com/splendiddolpin/SI-SMP.git">https://github.com/splendiddolpin/SI-SMP.git</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/splendiddolpin/SI-SMP.git">https://github.com/splendiddolpin/SI-SMP.git</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
