--- a/siapc.html
+++ b/siapc.html
@@ -111,15 +111,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/arabicag.png" alt="">
+                  <img src="assets/img/siap/siapc1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/robustag.png" alt="">
+                  <img src="assets/img/siap/siapc2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/gambuhan.png" alt="">
+                  <img src="assets/img/siap/siapc3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/siap/siapc4.png" alt="">
                 </div>
 
               </div>
@@ -133,21 +137,19 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Promotion Web</li>
-                <li><strong>Client</strong>: Gambuhan Coffee</li>
-                <li><strong>Project date</strong>: 10 January, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://gambuhan.github.io/coffee/index.html">https://gambuhan.github.io/</a></li>
+                <li><strong>Category</strong>: Web</li>
+                <li><strong>Client</strong>: SIAP Clone</li>
+                <li><strong>Project date</strong>: 10 Agustus, 2023</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/splendiddolpin/SIAP-Clone.git">https://github.com/splendiddolpin/SIAP-Clone.git</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Gambuhan Coffee</h2>
+              <h2>SIAP Clone</h2>
               <p>
-                Discover the rich, authentic flavors of Gambuhan Coffee, a local coffee brand proudly rooted in the highlands of Gambuhan Village, Pulosari, Pemalang. Grown with care by dedicated farmers and processed using traditional methods, our coffee brings the essence of the village to every cup.
-                <br>
-                This website is a portfolio project to support the promotion of this local small business (UMKM), highlighting its products, stories, and impact on the community. Through clean design and informative content, we aim to connect coffee lovers with the unique heritage and potential of Gambuhan Coffee.
+                This project is a simplified clone of the SIAP Undip (Universitas Diponegoro Academic Information System) website. It was developed as a learning exercise to better understand how academic information systems work, particularly in managing student data, course registration (KRS), and academic schedules. The clone includes basic features such as a student login page, a simple dashboard displaying profile information, a form-based course registration system, and a class schedule display. While it does not replicate the full functionality of the original SIAP platform, this version focuses on core user interface elements and essential academic workflows. The project is built using HTML, CSS, and JavaScript, with optional backend integration using PHP or Node.js and MySQL. Its main purpose is to improve web development skills while simulating a real-world academic system interface.
               </p>
             </div>
-            <a href="gambuhand.html">Project Details ....</a>
+            <a href="siapcd.html">Project Details ....</a>
           </div>
 
         </div>
