--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img style="height: 200px; width: 100%;" src="assets/img/arabicag.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -354,13 +354,25 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img style="height: 200px; width: 100%;" src="assets/img/siap/siapc.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Web 4</h4>
                   <p>SIAP Clone</p>
                   <a href="assets/img/siap/siapc.png" title="Web 4" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="siapc.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-100">
+                <img style="height: 200px; width: 100%;" src="assets/img/AI 1/AI1.1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>AI 1</h4>
+                  <p>Vintage Photo</p>
+                  <a href="assets/img/AI 1/AI1.1.png" title="Web 4" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="siapc.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
