--- a/siapcd.html
+++ b/siapcd.html
@@ -131,16 +131,16 @@
               <span></span>
               <li><i class="bi bi-check-circle"></i> <span style="font-weight: bold;">Requirement Compilation (UML)</span></li>
               <p>To support the software design process, UML (Unified Modeling Language) was used to visualize the system’s structure and behavior. UML is a standardized modeling language commonly used in software engineering to describe system architecture through diagrams. In this project, simple UML diagrams such as Use Case Diagrams were used to illustrate user interactions with the system, while Class Diagrams helped define the structure of data and their relationships. Additionally, Sequence Diagrams were useful to represent the flow of logic in features like login and course registration. These diagrams provided a clear blueprint for development and improved communication of system design before implementation.</p>
-              <p style="font-weight: bold;">Use Case Diagram</p>
-              <img src="assets/img/PPL/UC.JPG" alt="" class="img-fluid services-img">
-              <p style="font-weight: bold;">Activity Diagram</p>
-              <img src="assets/img/PPL/AD.JPG" alt="" class="img-fluid services-img">
-              <p style="font-weight: bold;">Squence Diagram</p>
-              <img src="assets/img/PPL/SD.JPG" alt="" class="img-fluid services-img">
-              <p style="font-weight: bold;">Entity Relationships Diagram</p>
-              <img src="assets/img/PPL/ERD.JPG" alt="" class="img-fluid services-img">
-              <p style="font-weight: bold;">Class Diagram Diagram</p>
-              <img src="assets/img/PPL/CD.JPG" alt="" class="img-fluid services-img">
+              <p style="font-weight: bold;">Use Case Diagram :</p>
+              <img src="assets/img/PPL/UC.jpg" alt="" class="img-fluid services-img">
+              <p style="font-weight: bold;">Activity Diagram :</p>
+              <img src="assets/img/PPL/AD.jpg" alt="" class="img-fluid services-img">
+              <p style="font-weight: bold;">Squence Diagram :</p>
+              <img src="assets/img/PPL/SD.jpg" alt="" class="img-fluid services-img">
+              <p style="font-weight: bold;">Entity Relationships Diagram :</p>
+              <img src="assets/img/PPL/ERD.jpg" alt="" class="img-fluid services-img">
+              <p style="font-weight: bold;">Class Diagram Diagrams :</p>
+              <img src="assets/img/PPL/CD.jpg" alt="" class="img-fluid services-img">
 
               <li><i class="bi bi-check-circle"></i> <span style="font-weight: bold;">Wireframe</span></li>
               <p>As part of the design phase, wireframes were created to plan the layout and structure of the user interface before starting development. A wireframe is a low-fidelity visual guide that represents the basic structure of a web page or application screen. It focuses on placement of elements such as navigation menus, buttons, forms, and content sections—without involving colors, graphics, or detailed styling. In this project, wireframes helped map out the user flow between the login page, dashboard, course registration form, and schedule viewer. They served as a blueprint for UI development and ensured that the interface remained user-friendly and logically organized.</p>
