--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
               <div class="row gy-4 text-center">
                 <p>this page are under development if you find something abnormal or bug</p>
                 <p style="font-weight: bold;">please contact me on +62 856 4216 4930(whatsapp) or email me</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d285.63132295645994!2d110.19505065282064!3d-7.51047224605019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sid!2sid!4v1753711056593!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div><!-- End Contact Form -->
