--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img style="height: 200px; width: 100%;" src="assets/img/AI 1/AI1.1.png" class="img-fluid" alt="">
+                <img style="height: 200px; width: 100%; object-fit: cover;" src="assets/img/AI 1/AI1.1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>AI 1</h4>
                   <p>Vintage Photo</p>
