Updated HEX editing section and project documentation

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <li data-filter=".filter-app">Web</li>
             <li data-filter=".filter-product">Design</li>
             <li data-filter=".filter-branding">AI</li>
-            <li data-filter=".filter-photo">Photo</li>
+            <li data-filter=".filter-photo">Modding</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -318,7 +318,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-photo">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <img style="height: 200px; width: 100%;" src="assets/img/design1.2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -374,6 +374,18 @@
                   <p>Vintage Photo</p>
                   <a href="assets/img/AI 1/AI1.1.png" title="Web 4" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="siapc.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-100">
+                <img style="height: 200px; width: 100%; object-fit: cover;" src="assets/img/yugioh/yugioh0.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>AI 1</h4>
+                  <p>Game Mod</p>
+                  <a href="assets/img/yugioh/yugioh0.png" title="Web 4" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="MODyugioh.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
