Update and improvement

--- a/index.html
+++ b/index.html
@@ -368,23 +368,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img style="height: 200px; width: 100%; object-fit: cover;" src="assets/img/AI 1/AI1.1.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>AI 1</h4>
-                  <p>Vintage Photo</p>
-                  <a href="assets/img/AI 1/AI1.1.png" title="Web 4" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="siapc.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
                 <img style="height: 200px; width: 100%; object-fit: cover;" src="assets/img/yugioh/yugioh0.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>AI 1</h4>
+                  <h4>Modding 1</h4>
                   <p>Game Mod</p>
-                  <a href="assets/img/yugioh/yugioh0.png" title="Web 4" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/yugioh/yugioh0.png" title="yugioh Modding" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="MODyugioh.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -397,6 +385,131 @@
       </div>
 
     </section><!-- /Portfolio Section -->
+
+    <section id="ongoing-project" class="portfolio section light-background">
+
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Ongoing Project</h2>
+    <p>
+      These are projects that are currently in development. They represent my active work, 
+      experimentation, and continuous learning in web development, AI, and creative design.
+    </p>
+  </div><!-- End Section Title -->
+
+  <div class="container">
+
+    <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+
+      <!-- Filters -->
+      <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+        <li data-filter="*" class="filter-active">All</li>
+        <li data-filter=".filter-app">Web</li>
+        <li data-filter=".filter-branding">AI</li>
+        <li data-filter=".filter-product">Design</li>
+        <li data-filter=".filter-photo">Modding</li>
+      </ul><!-- End Filters -->
+
+      <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+        <!-- Ongoing Item 1 -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+          <div class="portfolio-content h-100">
+            <img style="height: 200px; width: 100%; object-fit: cover;"
+                 src="assets/img/ongoing/ongoing1.png"
+                 class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Web Ongoing</h4>
+              <p>Online Book Marketplace (In Progress)</p>
+              <a href="assets/img/ongoing/ongoing1.png"
+                 title="Ongoing Web Project"
+                 data-gallery="portfolio-gallery-ongoing"
+                 class="glightbox preview-link">
+                <i class="bi bi-zoom-in"></i>
+              </a>
+              <a href="detail.html"
+                 title="Currently in development"
+                 class="details-link">
+                <i class="bi bi-hourglass-split"></i>
+              </a>
+            </div>
+          </div>
+            <div class="project-progress">
+              <span>Progress: 60%</span>
+              <div class="progress">
+                <div class="progress-bar" style="width: 60%;"></div>
+              </div>
+            </div>
+        </div><!-- End Ongoing Item -->
+
+        <!-- Ongoing Item 2 -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+          <div class="portfolio-content h-100">
+            <img style="height: 200px; width: 100%; object-fit: cover;"
+                 src="assets/img/ongoing/ongoing2.png"
+                 class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>AI Ongoing</h4>
+              <p>Weather Prediction Model (Training Phase)</p>
+              <a href="assets/img/ongoing/ongoing2.png"
+                 title="AI Project"
+                 data-gallery="portfolio-gallery-ongoing"
+                 class="glightbox preview-link">
+                <i class="bi bi-zoom-in"></i>
+              </a>
+              <a href="detail.html"
+                 title="Model still improving"
+                 class="details-link">
+                <i class="bi bi-hourglass-split"></i>
+              </a>
+            </div>
+          </div>
+          <div class="project-progress">
+              <span>Progress: 80%</span>
+              <div class="progress">
+                <div class="progress-bar" style="width: 80%;"></div>
+              </div>
+            </div>
+        </div><!-- End Ongoing Item -->
+
+        <!-- Ongoing Item 3 -->
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+          <div class="portfolio-content h-100">
+            <img style="height: 200px; width: 100%; object-fit: cover;"
+                 src="assets/img/ongoing/ongoing3.png"
+                 class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Design Ongoing</h4>
+              <p>Personal Portfolio Redesign</p>
+              <a href="assets/img/ongoing/ongoing3.png"
+                 title="Design Project"
+                 data-gallery="portfolio-gallery-ongoing"
+                 class="glightbox preview-link">
+                <i class="bi bi-zoom-in"></i>
+              </a>
+              <a href="detail3.html"
+                 title="UI still under refinement"
+                 class="details-link">
+                <i class="bi bi-hourglass-split"></i>
+              </a>
+            </div>
+          </div>
+            <div class="project-progress">
+              <span>Progress: 80%</span>
+              <div class="progress">
+                <div class="progress-bar" style="width: 80%;"></div>
+              </div>
+            </div>
+        </div><!-- End Ongoing Item -->
+
+      </div><!-- End Ongoing Container -->
+
+    </div>
+
+  </div>
+
+</section><!-- /Ongoing Project Section -->
+
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section light-background">
