--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                  class="glightbox preview-link">
                 <i class="bi bi-zoom-in"></i>
               </a>
-              <a href="detail.html"
+              <a href="detail2.html"
                  title="Model still improving"
                  class="details-link">
                 <i class="bi bi-hourglass-split"></i>
