--- a/detail.html
+++ b/detail.html
@@ -152,6 +152,35 @@
             <div class="card h-100 shadow-sm">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center mb-2">
+                  <h6 class="mb-0">v0.4.0</h6>
+                  <span class="badge bg-primary">Jan 2026</span>
+                </div>
+
+                <p class="text-muted small">Landing Page, Guest Access & Profile Enhancement</p>
+
+                <ul class="mb-0">
+                  <li>Added public landing page for first-time visitors (guest access)</li>
+                  <li>Implemented guest-accessible book detail page without login</li>
+                  <li>Displayed popular books based on most favorites with smart fallback logic</li>
+                  <li>Removed login-required features (favorite, personal actions) from landing page</li>
+                  <li>Replaced "Buy via WhatsApp" with "Login to Order" for non-authenticated users</li>
+                  <li>Added login validation for WhatsApp checkout with informative guest message</li>
+                  <li>Integrated shipping address field into user profile settings</li>
+                  <li>Updated database users table to support address storage</li>
+                  <li>Enhanced profile UI with textarea-based address input</li>
+                  <li>Included user address automatically in WhatsApp order message</li>
+                  <li>Improved overall UI consistency using x-app-layout</li>
+                  <li>Refactored controllers and routes for cleaner guest & auth separation</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-md-6">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center mb-2">
                   <h6 class="mb-0">v0.3.0</h6>
                 <span class="badge bg-primary">Jan 2026</span>
                 </div>
